fixed overflow y

--- a/src/assets/styles/cmps/_preview-body.scss
+++ b/src/assets/styles/cmps/_preview-body.scss
@@ -23,8 +23,9 @@
         }
     }
     .list-card-details {
-        overflow: hidden;
         padding: 6px 8px 2px;
+    }
+    .tasks{
         overflow-y: auto;
     }
 }
